--- a/themes/fox/_config.yml
+++ b/themes/fox/_config.yml
@@ -284,11 +284,11 @@ gitalk:
 # Gitment 评论模块的配置，默认为不激活
 gitment:
   enable: true
-  owner: Assan233
-  repo:
+  owner: Assan
+  repo: Assan-Blog
   oauth:
     clientId: 658925f1e4156794eb30
-    clientSecret: 7c486e39d64d534974d8056ceaf69ede5d92e549
+    clientSecret: 3394e8d93485721c80b049b1149077f227900768
 
 # disqus config, default disabled
 # Disqus评论模块的配置，默认为不激活
