--- a/themes/fox/_config.yml
+++ b/themes/fox/_config.yml
@@ -95,8 +95,8 @@ music:
 video:
   enable: false
   showTitle: true
-  title: 精彩视频
-  url: https://v.youku.com/v_show/id_XNDYyNzYxMzg4NA==.html?spm=a2hcb.12675304.m_7182_c_14738.d_2&s=052a6c0147efbfbd11ef&scm=20140719.rcmd.7182.show_052a6c0147efbfbd11ef # 必填
+  title: Video
+  url: # 必填
   pic:
   thumbnails:
   height: # 如：400
@@ -169,7 +169,7 @@ reward:
 # minCharNumber: Approve copyright information by copying at least how many characters.
 # 是否激活复制文章时追加博客和作者的版权信息.
 copyright:
-  enable: false
+  enable: true
   minCharNumber: 120 # 至少复制多少个字符就追加版权信息.
   description: 本文章著作权归作者所有，任何形式的转载都请注明出处。
 
@@ -189,11 +189,11 @@ mathjax:
 # 文章信息--若要开启文章字数统计，需要安装 hexo-wordcount 插件，安装命令: `npm i --save hexo-wordcount`
 postInfo:
   date: true # 发布日期
-  update: false # 更新日期
-  wordCount: false # 文章字数统计
-  totalCount: false # 站点总文章字数
-  min2read: false # 文章阅读时长
-  readCount: false # 文章阅读次数
+  update: true # 更新日期
+  wordCount: true # 文章字数统计
+  totalCount: true # 站点总文章字数
+  min2read: true # 文章阅读时长
+  readCount: true # 文章阅读次数
 
 
 # Whether to activate the 'love' effect of clicking on the page.
