--- a/themes/fox/_config.yml
+++ b/themes/fox/_config.yml
@@ -314,7 +314,7 @@ valine:
   visitor: true
   avatar: 'retro' # Gravatar style : mm/identicon/monsterid/wavatar/retro/hide
   pageSize: 10
-  placeholder: 'just go go' # Comment Box placeholder
+  placeholder: "Let's Rock !!!!" # Comment Box placeholder
   background: /medias/comment_bg.png
 
 # The configuration of the MiniValine comment module is not activated by default.
