--- a/themes/fox/_config.yml
+++ b/themes/fox/_config.yml
@@ -10,6 +10,16 @@ menu:
   Categories:
     url: /categories
     icon: fas fa-bookmark
+    children:
+      - name: 笔记
+        url: /categories/笔记
+        icon: fas fa-bookmark
+      - name: 原创
+        url: /categories/原创
+        icon: fas fa-image
+      - name: 转载
+        url: /categories/转载
+        icon: fas fa-book
   Archives:
     url: /archives
     icon: fas fa-archive
@@ -363,7 +373,7 @@ busuanziStatistics:
 # 添加 Google Analytics 配置
 googleAnalytics:
   enable: true
-  id:
+  id: UA-171148327-1
 
 # Add baidu analytics configuration
 # 添加 baidu Analytics 配置
@@ -440,6 +450,29 @@ featureImages:
 - /medias/featureimages/21.jpg
 - /medias/featureimages/22.jpg
 - /medias/featureimages/23.jpg
+- /medias/featureimages/24.jpg
+- /medias/featureimages/25.jpg
+- /medias/featureimages/26.jpg
+- /medias/featureimages/27.jpg
+- /medias/featureimages/28.jpg
+- /medias/featureimages/29.jpg
+- /medias/featureimages/30.jpg
+- /medias/featureimages/31.jpg
+- /medias/featureimages/32.jpg
+- /medias/featureimages/33.jpg
+- /medias/featureimages/34.jpg
+- /medias/featureimages/35.jpg
+- /medias/featureimages/36.jpg
+- /medias/featureimages/37.jpg
+- /medias/featureimages/38.jpg
+- /medias/featureimages/39.jpg
+- /medias/featureimages/40.jpg
+- /medias/featureimages/41.jpg
+- /medias/featureimages/42.jpg
+- /medias/featureimages/43.jpg
+- /medias/featureimages/44.jpg
+- /medias/featureimages/45.jpg
+- /medias/featureimages/46.jpg
 
 # default configs that the default policy for every articles/posts
 # default 配置文章的默认转载规则
@@ -499,7 +532,7 @@ ribbon_dynamic:
 # 支持顺序，可选项目为twitter, facebook, google, qq, qzone, wechat, weibo, douban, linkedin.
 sharejs:
   enable: true
-  sites: twitter,facebook,google,qq,qzone,wechat,weibo,douban,linkedin
+  sites: qq,qzone,wechat,weibo,douban
 
 # addthis文章分享模块.
 addthis:
